# audio_rank_stitch

./: .gitignore  README.md  Stitcher.py  Wavrecord.py  environment.yml  pyproject.toml
src/: MainPlayback.py  MainRecord.py  __init__.py  app_state.py  config.py  main.py  main_playback.py  main_record.py
src/audio/: DiskIO.py  Play.py  Record.py  RecordingQueue.py  Transcribe.py  audio_transcription.py  recording_queue.py  speaker_playback.py  telephone_playback.py  telephone_record.py
src/audio/loading/: audio_disk_io.py  filename.py
src/audio/mixer/: audio_mixer.py
src/audio/plugins/: audio_plugins.py  compressor.py  lowpass_filter.py
src/ranking/: IO.py  Rank.py  RankIO.py  embedding.py  markov.py  rankings.py  shuffling.py  word_ranking_io.py  word_rankings.py
src/sequencing/: Mixer.py  Sequencer.py
src/shuffling/: Shuffle.py  shuffling.py
src/ui/: PlaybackWindow.py  README.md  RecordingWindow.py  speaker_playback_server.py  telephone_recording_server.py
src/ui/playback_static/: script.js  style.css
src/ui/playback_templates/: index.html
src/ui/recording_static/: script.js  style.css
src/ui/recording_templates/: index.html
src/util/: Result.py  logger.py  stringcleaner.py
src/util/collections/: lru_default_dict.py
src/workers/: __init__.py  playback_worker.py  record_worker.py
tests/: test_app_state.py  test_disk_io.py  test_logger.py  test_markov.py  test_rankings.py  test_recorder.py  test_result.py  test_shuffle.py  test_telephone_player.py
