[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-rank-stitch"
version = "0.1.0"
description = "Audio recording, transcription, and stitching tool"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Marvin Grimm", email = "mrvn.grimm@gmail.com"},
    {name = "Christoph Zeckel", email = "derechtepanda@gmail.com"},
]

dependencies = [
    "pydub>=0.25.1",
    "numpy>=2.0",
    "sounddevice>=0.5.0",
    "pynput>=1.7.6",
    "whisperx>=3.0.1",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.2.0",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py311"
